fix styling issue

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div class="line"></div>
           <div class="card-items skewCard2">
             <div class="card-content">
-              <span>Withdraw</span>
+              <span>Withdraw Money</span>
             </div>
             <div class="card-content">
               <span>Pay Home Rent</span>
