--- a/index.html
+++ b/index.html
@@ -31,30 +31,70 @@
         <div class="card-body">
           <div class="card-items skewCard1">
             <div class="card-content">
-              <span>Bank Transfer</span>
+              <span
+                ><img
+                  src="/images/bank.svg "
+                  class="icons"
+                  alt="bank transfer"
+                />
+                Bank Transfer</span
+              >
             </div>
             <div class="card-content">
-              <span><i class="fas fa-money-bill-wave"></i> Pay Fines</span>
+              <span
+                ><img
+                  src="/images/payment-method-svgrepo-com.svg"
+                  alt="pay finess"
+                />
+                Pay Fines</span
+              >
             </div>
             <div class="card-content">
-              <span>Pay for Business</span>
+              <span
+                ><img src="/images/mobile-payment-svgrepo-com.svg" alt="" /> Pay
+                for Business</span
+              >
             </div>
           </div>
           <div class="line"></div>
           <div class="card-items skewCard2">
             <div class="card-content">
-              <span>Withdraw Money</span>
+              <span>
+                <img
+                  src="/images/credit-card-pay-svgrepo-com.svg"
+                  alt="withdraw money"
+                />
+                Withdraw Money</span
+              >
             </div>
             <div class="card-content">
-              <span>Pay Home Rent</span>
+              <span
+                ><img
+                  src="/images/home-insurance-svgrepo-com.svg"
+                  alt="home rent"
+                />
+                Pay Home Rent</span
+              >
             </div>
             <div class="card-content">
-              <span>Charity</span>
+              <span
+                ><img
+                  src="/images/charity-education-svgrepo-com.svg"
+                  alt="charity"
+                />
+                Charity</span
+              >
             </div>
           </div>
         </div>
         <div class="card-footer">
-          <span>Recharge Mobile Balance</span>
+          <span
+            ><img
+              src="/images/email-message-by-mobile-phone-svgrepo-com.svg"
+              alt="Recharge Balance"
+            />
+            Recharge Mobile Balance</span
+          >
         </div>
       </div>
     </div>
