minor styling fix

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                   class="icons"
                   alt="bank transfer"
                 />
-                Bank Transfer</span
+                BANK TRANSFER</span
               >
             </div>
             <div class="card-content">
@@ -46,13 +46,13 @@
                   src="/images/payment-method-svgrepo-com.svg"
                   alt="pay finess"
                 />
-                Pay Fines</span
+                PAY FINES</span
               >
             </div>
             <div class="card-content">
               <span
-                ><img src="/images/mobile-payment-svgrepo-com.svg" alt="" /> Pay
-                for Business</span
+                ><img src="/images/mobile-payment-svgrepo-com.svg" alt="" /> PAY
+                FOR BUSINESS</span
               >
             </div>
           </div>
@@ -60,41 +60,36 @@
           <div class="card-items skewCard2">
             <div class="card-content">
               <span>
+                WITHDRAW MONEY
                 <img
                   src="/images/credit-card-pay-svgrepo-com.svg"
                   alt="withdraw money"
-                />
-                Withdraw Money</span
-              >
+              /></span>
             </div>
             <div class="card-content">
-              <span
-                ><img
+              <span>
+                PAY HOME RENT
+                <img
                   src="/images/home-insurance-svgrepo-com.svg"
                   alt="home rent"
-                />
-                Pay Home Rent</span
-              >
+              /></span>
             </div>
             <div class="card-content">
-              <span
-                ><img
+              <span>
+                CHARITY
+                <img
                   src="/images/charity-education-svgrepo-com.svg"
                   alt="charity"
-                />
-                Charity</span
-              >
+              /></span>
             </div>
           </div>
         </div>
         <div class="card-footer">
-          <span
-            ><img
-              src="/images/email-message-by-mobile-phone-svgrepo-com.svg"
-              alt="Recharge Balance"
-            />
-            Recharge Mobile Balance</span
-          >
+          <img
+            src="/images/email-message-by-mobile-phone-svgrepo-com.svg"
+            alt="Recharge Balance"
+          />
+          <p>RECHARGE MOBILE BALANCE</p>
         </div>
       </div>
     </div>
