--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="card-content">
               <span
                 ><img
-                  src="/images/bank.svg "
+                  src="/images/transfer.png "
                   class="icons"
                   alt="bank transfer"
                 />
@@ -42,17 +42,13 @@
             </div>
             <div class="card-content">
               <span
-                ><img
-                  src="/images/payment-method-svgrepo-com.svg"
-                  alt="pay finess"
-                />
-                PAY FINES</span
+                ><img src="/images/fine.png" alt="pay finess" /> PAY FINES</span
               >
             </div>
             <div class="card-content">
               <span
-                ><img src="/images/mobile-payment-svgrepo-com.svg" alt="" /> PAY
-                FOR BUSINESS</span
+                ><img src="/images/transaction.png" alt="" /> PAY FOR
+                BUSINESS</span
               >
             </div>
           </div>
@@ -61,25 +57,19 @@
             <div class="card-content">
               <span>
                 WITHDRAW MONEY
-                <img
-                  src="/images/credit-card-pay-svgrepo-com.svg"
-                  alt="withdraw money"
+                <img src="/images/withdraw.png" alt="withdraw money"
               /></span>
             </div>
             <div class="card-content">
               <span>
                 PAY HOME RENT
-                <img
-                  src="/images/home-insurance-svgrepo-com.svg"
-                  alt="home rent"
+                <img src="/images/rent.png" alt="home rent"
               /></span>
             </div>
             <div class="card-content">
               <span>
                 CHARITY
-                <img
-                  src="/images/charity-education-svgrepo-com.svg"
-                  alt="charity"
+                <img src="/images/zakat.png" alt="charity"
               /></span>
             </div>
           </div>
